// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inferSchema circular 1`] = `
"type Storage {
  a: LiveObject<A>
}

type B {
  a: LiveObject<A>
}

type A {
  a?: LiveObject<A>
  b?: LiveObject<B>
}"
`;

exports[`inferSchema correctly infers the "BASIC_LIVE_OBJECT" schema 1`] = `
"type Storage {
  fills: LiveObject<Fill>
  strokes: LiveObject<Stroke>
}

type Fill {
  mesh: String
  sole: String
  stripes: String
  laces: String
}

type Stroke {
  mesh: String
  sole: String
  laces: String
}"
`;

exports[`inferSchema correctly infers the "BASIC_MERGE" schema 1`] = `
"type Storage {
  fills: LiveObject<Fill>
  strokes: LiveObject<Stroke>
}

type Fill {
  position: Position
  sole: String
  stripes: String
  laces: String
}

type Stroke {
  position: Position
  sole: String
  laces: String
}

type Position {
  x: Float
  y: Float
}"
`;

exports[`inferSchema correctly infers the "BASIC_UNMERGEABLE" schema 1`] = `
"type Storage {
  fills: LiveObject<Fill>
  strokes: LiveObject<Stroke>
}

type Fill {
  mesh: Mesh
  sole: String
  stripes: String
  laces: String
}

type Mesh {
  a: Int
}

type Stroke {
  mesh: StrokeMesh
  sole: String
  laces: String
}

type StrokeMesh {
  a: String
}"
`;

exports[`inferSchema correctly infers the "BRACKET_KEY" schema 1`] = `
"type Storage {
  _____: LiveObject<D> # FIXME: Field name 'd{' is illegal, can only contain alphanumeric characters and underscores
  _____2: LiveObject<D> # FIXME: Field name 'd]' is illegal, can only contain alphanumeric characters and underscores
}

type D {
}"
`;

exports[`inferSchema correctly infers the "EMPTY" schema 1`] = `
"type Storage {
}"
`;

exports[`inferSchema correctly infers the "EMPTY_KEY" schema 1`] = `
"type Storage {
  _____: LiveObject<Value> # FIXME: Field name '' is illegal, must start with a letter
}

type Value {
}"
`;

exports[`inferSchema correctly infers the "KEY_WITH_WHITESPACE" schema 1`] = `
"type Storage {
  _____: LiveObject<TestKey> # FIXME: Field name 'test key' is illegal, can only contain alphanumeric characters and underscores
}

type TestKey {
}"
`;

exports[`inferSchema correctly infers the "RESERVED_KEY" schema 1`] = `
"type Storage {
  _____: LiveObject<LiveblockType> # FIXME: Field name 'liveblocksType' is illegal, cannot be a reserved name
}

type LiveblockType {
}"
`;
